--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -25,9 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "import hashlib\n",
     "\n",
@@ -35,7 +43,7 @@
     "     hash_object = hashlib.sha256(input_string.encode())\n",
     "     hash_int = int(hash_object.hexdigest(), 16)\n",
     "     return (hash_int % 3) + 1\n",
-    "input_string = \"your_first_name_here\"\n",
+    "input_string = \"shahab\"\n",
     "result = hash_to_range(input_string)\n",
     "print(result)\n"
    ]
@@ -67,15 +75,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from typing import List\n",
     "\n",
     "def first_duplicate(nums: List[int]) -> int:\n",
-    "    # TODO\n",
-    "    pass"
+    "    for i in range(len(nums)):\n",
+    "        for j in range(i):\n",
+    "            if nums[i] == nums[j]:\n",
+    "                return nums[i]\n",
+    "    return -1\n",
+    "\n",
+    "first_duplicate([3, 1, 4, 2, 5, 1, 6])\n"
    ]
   },
   {
@@ -112,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,11 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# I was to write a python function that either identifies the first integer in a given list that has a duplicate or in its absence returns -1"
    ]
   },
   {
@@ -181,11 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# 2 additional example lists\n",
+    "\n",
+    "# input: nums = [6, 5, 3, 2, 1, 2]\n",
+    "# output: 2\n",
+    "\n",
+    "# input: nums = [13, 221, 113, 1546, 1]\n",
+    "# output: -1"
    ]
   },
   {
@@ -200,9 +230,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# first pass at the coding up the solution to Question 1\n",
+    "\n",
+    "def first_duplicate(nums: List[int]) -> int:\n",
+    "    for i in range(len(nums)):\n",
+    "        for j in range(i):\n",
+    "            if nums[i] == nums[j]:\n",
+    "                return nums[i]\n",
+    "    return -1\n",
+    "\n",
+    "\n",
+    "# second pass at the coding up the solution to Question 1\n",
+    "\n",
+    "def first_duplicate_sec(nums: List[int]) -> int:\n",
+    "    for i in range(len(nums)):\n",
+    "        if nums[i] in nums[:i]:\n",
+    "            return nums[i]\n",
+    "    return -1\n",
+    "\n",
+    "first_duplicate_sec([12, 3, 4, 6, 8, 1, 5, 3])\n"
    ]
   },
   {
@@ -219,7 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# The solution works because the function I created will take any integer based list as input after which using a nested for loop\n",
+    "# it will scan through each element in the list and will return the first duplicate. In case there are no duplicates it will return -1"
    ]
   },
   {
@@ -236,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Since my original solution consists of a nested for loop, it will be O(n^2) so not ideal for scaling."
    ]
   },
   {
@@ -253,7 +313,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# The alternative solution is defining a function that will take an integer list as an input. The function will consist of a for loop that\n",
+    "# will run through all the elements of the the input list. It will be a nested loop that will have an if statement which will compare each\n",
+    "# element till it finds a duplicate. In case it does not return -1"
    ]
   },
   {
@@ -301,7 +363,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
