Added commentary on space complexity

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -296,7 +296,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Since my original solution consists of a nested for loop, it will be O(n^2) so not ideal for scaling."
+    "# Since my original solution consists of a nested for loop, it will be O(n^2) so not ideal for scaling. The space complexity is 0(1) as we only have 2 variables and does not\n",
+    "# allocate any additional data structures"
    ]
   },
   {
