--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -27,9 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "import hashlib\n",
     "\n",
@@ -37,7 +45,7 @@
     "     hash_object = hashlib.sha256(input_string.encode())\n",
     "     hash_int = int(hash_object.hexdigest(), 16)\n",
     "     return (hash_int % 3) + 1\n",
-    "input_string = \"your_first_name_here\"\n",
+    "input_string = \"shahab\"\n",
     "result = hash_to_range(input_string)\n",
     "print(result)\n"
    ]
@@ -86,18 +94,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Definition for a binary tree node.\n",
-    "# class TreeNode(object):\n",
-    "#     def __init__(self, val = 0, left = None, right = None):\n",
-    "#         self.val = val\n",
-    "#         self.left = left\n",
-    "#         self.right = right\n",
+    "class TreeNode(object):\n",
+    "    def __init__(self, val = 0, left = None, right = None):\n",
+    "         self.val = val\n",
+    "         self.left = left\n",
+    "         self.right = right\n",
+    "\n",
     "def is_duplicate(root: TreeNode) -> int:\n",
-    "  # TODO"
+    "\n",
+    "    if not root:\n",
+    "        return -1\n",
+    "\n",
+    "    q = deque([(root, 0)])           # (node, depth)\n",
+    "    freq = defaultdict(int)          # value -> count\n",
+    "    first_depth = {}                 # value -> first seen depth\n",
+    "    first_order = {}                 # value -> first seen order (for tie-break)\n",
+    "    order = 0\n",
+    "\n",
+    "    # Single BFS pass: track frequency and the first time (depth + order) each value appears\n",
+    "    while q:\n",
+    "        node, d = q.popleft()\n",
+    "\n",
+    "        freq[node.val] += 1\n",
+    "        if node.val not in first_depth:\n",
+    "            first_depth[node.val] = d\n",
+    "            first_order[node.val] = order\n",
+    "            order += 1\n",
+    "\n",
+    "        if node.left:\n",
+    "            q.append((node.left, d + 1))\n",
+    "        if node.right:\n",
+    "            q.append((node.right, d + 1))\n",
+    "\n",
+    "    # Candidates are values that appear at least twice\n",
+    "    candidates = [v for v, c in freq.items() if c >= 2]\n",
+    "    if not candidates:\n",
+    "        return -1"
    ]
   },
   {
@@ -227,7 +264,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Given a string that only contains brackets, the problem is to verify if a string is valid or not. In order for it to be valid, it has to\n",
+    "# have its brackets closed and in the correct order"
    ]
   },
   {
@@ -240,11 +278,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# running their code below\n",
+    "def is_valid_brackets(s: str) -> bool:\n",
+    "    # TODO\n",
+    "    \n",
+    "    last_bracket_open = \"\"\n",
+    "    l_bracket_open = []\n",
+    "\n",
+    "    for ch in s:\n",
+    "\n",
+    "        # print(ch) # checking\n",
+    "\n",
+    "        if ch == \"(\" or ch == \"{\"  or ch == \"[\":\n",
+    "            l_bracket_open.insert(0,ch)\n",
+    "            last_bracket_open = ch\n",
+    "        elif ch == \")\" and last_bracket_open == \"(\":\n",
+    "            l_bracket_open.remove(last_bracket_open)\n",
+    "            last_bracket_open = l_bracket_open[0] if len(l_bracket_open) > 0 else \"\"\n",
+    "        elif ch == \"}\" and last_bracket_open == \"{\":\n",
+    "            l_bracket_open.remove(last_bracket_open)\n",
+    "            last_bracket_open = l_bracket_open[0] if len(l_bracket_open) > 0 else \"\"\n",
+    "        elif ch == \"]\" and last_bracket_open == \"[\":\n",
+    "            l_bracket_open.remove(last_bracket_open)\n",
+    "            last_bracket_open = l_bracket_open[0] if len(l_bracket_open) > 0 else \"\"\n",
+    "        else:\n",
+    "            l_bracket_open = [0]\n",
+    "            break\n",
+    "\n",
+    "\n",
+    "\n",
+    "    if l_bracket_open == []:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# I will now enter a bracket sequence which is incorrect to the above function\n",
+    "\n",
+    "is_valid_brackets('[(])')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# As you can see above the code returns false as the input given to the function contained a string which had an incorrect bracket placement"
    ]
   },
   {
@@ -261,7 +362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# I have already copied their code in the cell above"
    ]
   },
   {
@@ -278,7 +379,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# They created a very detailed for loop consisting of if, elif, and operators. The function checks the first element of the list to see if\n",
+    "# it contains a bracket open character and it will return false if it does not. In case the correct element is identified they populate\n",
+    "# previously created empty lists to keep track of the last bracket open."
    ]
   },
   {
@@ -295,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# I believe the complexity here is O(n^2) as their for loop has an added layer of populating an empty list. The space complexity is O(1)."
    ]
   },
   {
@@ -312,7 +415,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# I think the solution was well formulated however there was no commentary present. In order for your code to be readable by others, I feel\n",
+    "# that documenting each step with brief notes is extremely important. I was able to figure out what the function was doing it because of\n",
+    "# its simplicity but had it been a more complicated one, I would have really struggled."
    ]
   },
   {
@@ -338,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# reflection will be submitted in a pdf"
    ]
   },
   {
@@ -396,7 +501,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -410,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
