--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,9 +173,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (1770572553.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[9], line 8\u001b[0;36m\u001b[0m\n\u001b[0;31m    # TODO\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "# Definition for a binary tree node.\n",
     "# class TreeNode(object):\n",
@@ -184,7 +193,7 @@
     "#         self.left = left\n",
     "#         self.right = right\n",
     "def bt_path(root: TreeNode) -> List[List[int]]:\n",
-    "  # TODO"
+    "    # TODO"
    ]
   },
   {
@@ -225,11 +234,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (2767058236.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    # TODO\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "def missing_num(nums: List) -> int:\n",
     "  # TODO"
@@ -260,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +346,7 @@
        "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,11 +412,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# I believe the complexity here is O(n^2) as their for loop has an added layer of populating an empty list. The space complexity is O(1)."
+    "# I believe the complexity here is O(n^2) as their for loop has an added layer of inserting / removing elements to a list. In other words, n iterations of the loop x O(n) per \n",
+    "# insertion/removal \n",
+    "# 1_bracket_open stores unmatched opening brackets. At worst (all are opening brackets), it holds O(n) elements so space complexity is O(n)."
    ]
   },
   {
@@ -411,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,12 +458,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# reflection will be submitted in a pdf"
+    "## Reflection\n",
+    "\n",
+    "As I embarked upon completing assignmnet 1 of the Algorithms & Data Structures module, the first learning opportunity was the use of the hash function which will randomly assign a question number me to be by entering an input string containing our first names in lower case. I was assigned question 1 by the hash function. Answering the question required to write a python function that either identifies the first integer in a given list that has a duplicate or in its absence returns -1. The way I decided to approach the problem was to first right the outer function which was to iterate over all terms in the given list. In python code it was for i in range(len(nums). Then I pondered over the additional for loop layer which will further iterate over range (len(nums) - 1) for each element int the list. This led me to drafting the following function:\n",
+    "\n",
+    "from typing import List\n",
+    "\n",
+    "def first_duplicate(nums: List[int]) -> int:\n",
+    "    for i in range(len(nums)):\n",
+    "        for j in range(i):\n",
+    "            if nums[i] == nums[j]:\n",
+    "                return nums[i]\n",
+    "    return -1\n",
+    "\n",
+    "As part of assignment 2, I was asked to review my partners code of attempting a different problem. The first step was to understand the question which required writing a python code which will detect if brackets are placed in the write order in a given string. Reviewing the code, I was able to analyze that they had written an extensive for loop which tracked open brackets in a list and removes a matching one when a closing bracket is found. The code was simple enough to be understood however I realized the importance of commentary to help with readability."
    ]
   },
   {
